--- a/package.json
+++ b/package.json
@@ -72,8 +72,10 @@
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "quill": "^1.3.7",
     "react-chat-elements": "^0.9.0",
     "react-native-cli": "^2.0.1",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
     "sql": "^0.78.0"
