--- a/package.json
+++ b/package.json
@@ -74,10 +74,14 @@
     "popper.js": "^1.16.1",
     "quill": "^1.3.7",
     "react-chat-elements": "^0.9.0",
+    "react-firebaseui": "^4.1.0",
     "react-native-cli": "^2.0.1",
     "react-quill": "^1.3.5",
+    "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
+    "redux": "^4.0.5",
     "sql": "^0.78.0"
   }
 }
