--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-art": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-if-elseif-else-render": "^1.0.2",
     "react-native-div": "^1.1.2",
     "react-native-torch": "^1.2.0",
     "react-native-web": "^0.15.0",
